# VivaBench

./: .gitignore  LICENSE  README.md  anthropic.ipynb  explore.ipynb  pyproject.toml  requirements.txt  vivabench.croissant
cases/: prototype_1.json
cases/msd_raw/: msd_1.csv  msd_1.json
configs/: evaluate.yaml  generate.yaml
notebooks/: Agent  Benchmark Demo.ipynb  Agent Benchmark Demo.ipynb  CaseParser.ipynb  Examiner Test.ipynb  Example exchange.ipynb  InvestigationParser.ipynb  Prototype #1.ipynb  data_analysis.ipynb  dataclasses.ipynb  demo.ipynb  example.json
vivabench/: __init__.py  cli.py  evaluate.py  examiner.py  generate.py  generator.py  mapper.py  metrics.py  parser.py  util.py  utils.py
vivabench/data/: medqa_filter.py  pubmed_filter.py  pubmed_pipeline.py  screening_pipeline.py
vivabench/ontology/: concepts.py  default_investigations.csv  default_investigations.json  defaults.py  schema.py  synonyms.py  templates.py
vivabench/prompts/: agent.prompt  examiner.py  examiner_bedside.prompt  examiner_differentials.prompt  examiner_investigations.prompt  examiner_investigations_2.prompt  examiner_management.prompt  generate.py  generate_medqa.py  mapper.py  prompts.py
vivabench/prompts/prototype_1/: agent.prompt  simulator.prompt
