[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vivabench"
version = "1.0.0"
authors = [
  { name="Christopher Chiu", email="chy.chiu@gmail.com"},
]
description = "Benchmark for multi-turn medical reasoning"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "CC-BY-SA-4.0"
license-files = ["LICEN[CS]E*"]

dependencies = [
"aiohappyeyeballs==2.6.1",
"aiohttp==3.11.18",
"aiosignal==1.3.2",
"annotated-types==0.7.0",
"anthropic==0.50.0",
"anyio==4.9.0",
"asttokens==3.0.0",
"attrs==25.3.0",
"black==25.1.0",
"blis==0.7.11",
"cachetools==5.5.2",
"catalogue==2.0.10",
"certifi==2025.4.26",
"charset-normalizer==3.4.2",
"click==8.1.8",
"cloudpathlib==0.16.0",
"comm==0.2.2",
"confection==0.1.5",
"contourpy==1.3.2",
"cycler==0.12.1",
"cymem==2.0.11",
"dataclasses-json==0.6.7",
"debugpy==1.8.14",
"decorator==5.2.1",
"distro==1.9.0",
"en-core-sci-md @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_md-0.5.4.tar.gz",
"executing==2.2.0",
"faiss-cpu==1.11.0",
"filelock==3.18.0",
"filetype==1.2.0",
"fonttools==4.58.0",
"frozenlist==1.6.0",
"fsspec==2025.3.2",
"google-ai-generativelanguage==0.6.18",
"google-api-core==2.24.2",
"google-auth==2.40.1",
"googleapis-common-protos==1.70.0",
"greenlet==3.2.1",
"grpcio==1.71.0",
"grpcio-status==1.71.0",
"h11==0.16.0",
"hf-xet==1.1.0",
"httpcore==1.0.9",
"httpx==0.28.1",
"httpx-sse==0.4.0",
"huggingface-hub==0.31.1",
"idna==3.10",
"ipykernel==6.29.5",
"ipython==9.2.0",
"ipython-pygments-lexers==1.1.1",
"isort==6.0.1",
"jedi==0.19.2",
"jinja2==3.1.6",
"jiter==0.9.0",
"joblib==1.5.0",
"jsonpatch==1.33",
"jsonpointer==3.0.0",
"jupyter-client==8.6.3",
"jupyter-core==5.7.2",
"kiwisolver==1.4.8",
"langchain==0.3.25",
"langchain-anthropic==0.3.12",
"langchain-community==0.3.24",
"langchain-core==0.3.62",
"langchain-deepseek==0.1.3",
"langchain-google-genai==2.1.4",
"langchain-ollama==0.3.3",
"langchain-openai==0.3.16",
"langchain-text-splitters==0.3.8",
"langcodes==3.5.0",
"langsmith==0.3.43",
"language-data==1.3.0",
"loguru==0.7.3",
"marisa-trie==1.2.1",
"markdown-it-py==3.0.0",
"markupsafe==3.0.2",
"marshmallow==3.26.1",
"matplotlib==3.10.3",
"matplotlib-inline==0.1.7",
"mdurl==0.1.2",
"mpmath==1.3.0",
"msgpack==1.1.0",
"multidict==6.4.3",
"murmurhash==1.0.12",
"mypy-extensions==1.1.0",
"nest-asyncio==1.6.0",
"networkx==3.4.2",
"nltk==3.9.1",
"numpy==1.26.3",
"nvidia-cublas-cu12==12.6.4.1",
"nvidia-cuda-cupti-cu12==12.6.80",
"nvidia-cuda-nvrtc-cu12==12.6.77",
"nvidia-cuda-runtime-cu12==12.6.77",
"nvidia-cudnn-cu12==9.5.1.17",
"nvidia-cufft-cu12==11.3.0.4",
"nvidia-cufile-cu12==1.11.1.6",
"nvidia-curand-cu12==10.3.7.77",
"nvidia-cusolver-cu12==11.7.1.2",
"nvidia-cusparse-cu12==12.5.4.2",
"nvidia-cusparselt-cu12==0.6.3",
"nvidia-nccl-cu12==2.26.2",
"nvidia-nvjitlink-cu12==12.6.85",
"nvidia-nvtx-cu12==12.6.77",
"ollama==0.4.9",
"openai==1.77.0",
"orjson==3.10.18",
"packaging==24.2",
"pandas==2.2.3",
"parso==0.8.4",
"pathspec==0.12.1",
"pexpect==4.9.0",
"pillow==11.2.1",
"pip==25.1.1",
"platformdirs==4.3.7",
"preshed==3.0.9",
"prompt-toolkit==3.0.51",
"propcache==0.3.1",
"proto-plus==1.26.1",
"protobuf==5.29.4",
"psutil==7.0.0",
"ptyprocess==0.7.0",
"pure-eval==0.2.3",
"pyasn1==0.6.1",
"pyasn1-modules==0.4.2",
"pydantic==2.11.5",
"pydantic-core==2.33.2",
"pydantic-settings==2.9.1",
"pygments==2.19.1",
"pyparsing==3.2.3",
"python-dateutil==2.9.0.post0",
"python-dotenv==1.1.0",
"python-rapidjson==1.20",
"pytz==2025.2",
"pyyaml==6.0.2",
"pyzmq==26.4.0",
"regex==2024.11.6",
"requests==2.32.3",
"requests-toolbelt==1.0.0",
"rich==14.0.0",
"rsa==4.9.1",
"safetensors==0.5.3",
"scikit-learn==1.6.1",
"scipy==1.15.3",
"seaborn==0.13.2",
"sentence-transformers==4.1.0",
"setuptools==80.3.1",
"shellingham==1.5.4",
"six==1.17.0",
"smart-open==6.4.0",
"sniffio==1.3.1",
"spacy==3.7.4",
"spacy-legacy==3.0.12",
"spacy-loggers==1.0.5",
"sqlalchemy==2.0.40",
"srsly==2.5.1",
"stack-data==0.6.3",
"sympy==1.14.0",
"tenacity==9.1.2",
"thinc==8.2.4",
"threadpoolctl==3.6.0",
"tiktoken==0.9.0",
"tokenizers==0.21.1",
"torch==2.7.0",
"tornado==6.4.2",
"tqdm==4.67.1",
"traitlets==5.14.3",
"transformers==4.51.3",
"triton==3.3.0",
"txtai==8.5.0",
"typer==0.9.4",
"typing-extensions==4.13.2",
"typing-inspect==0.9.0",
"typing-inspection==0.4.1",
"tzdata==2025.2",
"urllib3==2.4.0",
"wasabi==1.1.3",
"wcwidth==0.2.13",
"weasel==0.3.4",
"wrapt==1.17.2",
"yarl==1.20.0",
"zstandard==0.23.0",
]

[tool.setuptools]
packages = ["vivabench"]


[project.urls]
Homepage = "https://github.com/chy-chiu/vivabench"
Issues = "https://github.com/chy-chiu/vivabench/issues"

[project.scripts]
vivabench = "vivabench.cli:main"
